Add N-Body gravity simulator.