@@ -12,6 +12,7 @@ $OPENJFX = "C:\Users\pawel\.m2\repository\org\openjfx\"
 $CLASSPATH = "target\classes;$OPENJFX\javafx-controls\25.0.2\javafx-controls-25.0.2.jar;$OPENJFX\javafx-controls\25.0.2\javafx-controls-25.0.2-win.jar;$OPENJFX\javafx-graphics\25.0.2\javafx-graphics-25.0.2.jar;$OPENJFX\javafx-graphics\25.0.2\javafx-graphics-25.0.2-win.jar;$OPENJFX\javafx-base\25.0.2\javafx-base-25.0.2.jar;$OPENJFX\javafx-base\25.0.2\javafx-base-25.0.2-win.jar"
 
 # 4. JVM flags that suppress warnings.
+#$JVM_FLAGS = "-Dtornado.debug=True -Dtornado.print.kernel=True --enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -Dprism.verbose=false"
 $JVM_FLAGS = "--enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -Dprism.verbose=false"
 
 # 5. Launch TornadoVM.
